--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,14 @@
 Package: JGmisc
 Type: Package
 Title: Miscellaneous R functions.
-Version: 0.2
-Date: 2017-01-27
+Version: 0.3
+Date: 2018-05-25
 Author: Jason Grafmiller
-Maintainer: Jason Grafmiller <jason.grafmiller@kuleuven.be>
-Description: Provides extended functionality for ggplot2, lme4, and MCMCglmm models, as well as some functions for basic statistics and data manipulation. 
+Maintainer: Jason Grafmiller <j.grafmiller@bham.ac.uk>
+Description: Provides some custom functions for basic statistics and data manipulation. 
 Depends: 
-	ggplot2, 
-	lme4, 
-	magrittr,
-	MCMCglmm
+	magrittr
 Imports:
-	ape,
-	coda,
-	MuMIn,
 	plyr,
 	reshape2
 License: GPL-2
